[package]
name = "agb_block_game"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.15.0"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
smallvec = { version = "1.10", features = ["union", "const_generics", "const_new"] }

[profile.dev]
opt-level = 2
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true
